<resources>
    <string name="app_name">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_by">sort by</string>
    <string name="release_date">Release Date</string>
    <string name="filter_by">filter by</string>
    <string name="all_movies">All Movies</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="drama">Drama</string>
</resources>